@@ -1,4 +1,6 @@
 2.0RC1
+Added Avalon to component the ability to pass a parameter named "start" that controls whether
+to start or not the component.
 Added Avalon component wrapper so JCrontab can be used as an avalon component
 Added XMLParser to read and store CrontabEntryBeans in xml format
 Added XMLSource to manage CrontabEntryBeans in xml format
